# strata-format

./: .gitignore  CONTRIBUTING.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARTICLE.md
examples/: demo.py
strata/: __init__.py  chunker.py  cli.py  core.py  errors.py  format.py  gui.py
tests/: test_strata.py
