[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "strata-format"
version = "0.1.0"
description = "A self-contained, versioned, self-verifying file container - the smart-file format."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Strata contributors" }]
keywords = ["file-format", "versioning", "content-addressed", "integrity", "deduplication", "self-healing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving",
    "Topic :: System :: Filesystems",
]
dependencies = []  # pure standard library by design

[project.urls]
Homepage = "https://github.com/REPLACE_ME/strata"
Specification = "https://github.com/REPLACE_ME/strata/blob/main/SPEC.md"

[project.scripts]
strata = "strata.cli:main"

[tool.setuptools]
packages = ["strata"]
